@@ -226,3 +226,9 @@ plugin.py
     Remove self.source and self.destination and replace them throughout
     by CfgPlTr.source.value and CfgPlTr.destination.value, as the self.*
     values are not updated after a language change in the config menu.
+
+plugin.py
+    Fix split_off_props() and its regexes to trap minimal property
+    groups (with the correct end bracket matching the opening one).
+    Check for [ within the first 12 characters to allow for an opening
+    () group.
